--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -7,12 +7,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-				<img class="navbar-brand" src="/img/hugo.png" href="{{ "" | absLangURL }}" alt="Logo">
+				<img class="navbar-brand" src="/HugoGithubPages/static/img/hugo.png" href="{{ "" | absLangURL }}" alt="Logo">
 				<a class="navbar-brand">X</a>
-				<img class="navbar-brand" src="/img/github.png" href="{{ "" | absLangURL }}" alt="Logo">
+				<img class="navbar-brand" src="/HugoGithubPages/static/img/github.png" href="{{ "" | absLangURL }}" alt="Logo">
 				<a class="navbar-brand" href="{{ "" | absLangURL }}">Accueil</a>
-				<a class="navbar-brand" href="{{ "/post/about/" | absLangURL  }}">À propos de moi</a>
-				<a class="navbar-brand" href="{{ "/post/githubpageshugo/" | absLangURL }}">Github Pages et Hugo</a>
+				<a class="navbar-brand" href="{{ "/HugoGithubPages/post/about/" | absLangURL  }}">À propos de moi</a>
+				<a class="navbar-brand" href="{{ "/HugoGithubPages/post/githubpageshugo/" | absLangURL }}">Github Pages et Hugo</a>
       </div>
   
       <div class="collapse navbar-collapse" id="main-navbar">
